tests/integration/snapshots/integration__conformance__n_array_just_minus.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[-]
stdout ---

stderr ---
error: expected digit following minus sign, found `]`
 --> stdin:1:2
  |
1 | [-]
  |  ^
  |  |
  |  minus sign found here
